added error handling and updated swagger json
